--- a/css/sample.css
+++ b/css/sample.css
@@ -1,9 +1,7 @@
 body{
     font-family: Arial, sans-serif;
     background-color: #f4f4f9;
-    margin: 0;
-    padding: 0;
-    align-items: center;
+
     height: 100vh;
 }
 .container {
@@ -59,5 +57,5 @@ textarea{
   width: 95%;
   height: 200px;
   font-size:80%;
-  box-shadow: 3px 3px 3px 3px #555;
+  /* box-shadow: 3px 3px 3px 3px #555; */
 }
