--- a/css/sample.css
+++ b/css/sample.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: column
+  flex-direction: column;
   justify-content: center; /* 横の中心寄せ */
   align-items: center; /* 縦の中心寄せ */
   height: 100vh;
